--- a/src/assets/img/eact-globe.gl.html
+++ b/src/assets/img/eact-globe.gl.html
@@ -691,7 +691,7 @@ html {
 </iron-iconset-svg>
 </head>
   <body show-background-image="" style="background-color: rgb(53, 53, 53);">
-    <iframe id="backgroundImage" src="./eact-globe.gl_files/custom_background_image.html"></iframe>
+    <!-- <iframe id="backgroundImage" src="./eact-globe.gl_files/custom_background_image.html"></iframe> -->
     <ntp-app show-background-image_=""></ntp-app>
     <script type="module" src="chrome://new-tab-page/new_tab_page.js"></script>
     <link rel="stylesheet" href="chrome://resources/css/text_defaults_md.css">
