Changed Name of the App

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Notus React by Creative Tim | Free and Open Source UI Kit</title>
+    <title>WarDine</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQMcJr25L0_tox0fk190RGlCeB82zEZ9M"></script>
   </head>
   <body class="text-blueGray-700 antialiased">
